@@ -1,3 +1,8 @@
+2006-12-28  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/installer.rb (Gem::Installer#build_extensions):
+	Extension build failures now raise Gem::Installer::ExtensionBuildErrors.
+
 2006-12-26  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/package.rb (Gem::Package::TarInput#initialize): Bad
